--- a/cmp-databinding-app/src/app/cockpit/cockpit.component.html
+++ b/cmp-databinding-app/src/app/cockpit/cockpit.component.html
@@ -16,7 +16,7 @@
             #serverContentInput
         />
         <br>
-        <button class="btn btn-primary" (click)="onAddServer(serverNameInput, serverContentInput)">Add Server</button>
-        <button class="btn btn-primary" (click)="onAddBlueprint(serverNameInput, serverContentInput)">Add Server Blueprint</button>
+        <button class="btn btn-primary" (click)="onAddServer(serverNameInput)">Add Server</button>
+        <button class="btn btn-primary" (click)="onAddBlueprint(serverNameInput)">Add Server Blueprint</button>
     </div>
 </div>
