--- a/directives-app/src/app/app.component.html
+++ b/directives-app/src/app/app.component.html
@@ -5,16 +5,12 @@
       <br><br>
       <ul class="list-group">
         <div *ngIf="onlyOdd">
-          <li 
-            class="list-group-item"
-            [ngClass]="{ odd: odd % 2 !== 0 }"
-            [ngStyle]="{backgroundColor: odd % 2 !== 0 ? 'yellow':'transparent'}"
-            *ngFor="let odd of oddNumbers"
-          >
+          <li class="list-group-item" [ngClass]="{ odd: odd % 2 !== 0 }"
+            [ngStyle]="{backgroundColor: odd % 2 !== 0 ? 'yellow':'transparent'}" *ngFor="let odd of oddNumbers">
             {{ odd }}
           </li>
         </div>
-        <div *ngIf="!onlyOdd">
+        <!-- <div *ngIf="!onlyOdd">
           <li 
             class="list-group-item"
             [ngClass]="{ odd: even % 2 !== 0 }"
@@ -35,7 +31,14 @@
               {{ even }}
             </li>
           </div>
-        </ng-template>
+        </ng-template> -->
+
+        <div *appUnless="onlyOdd">
+          <li class="list-group-item" [ngClass]="{ odd: even % 2 !== 0 }"
+            [ngStyle]="{backgroundColor: even % 2 !== 0 ? 'green':'transparent'}" *ngFor="let even of evenNumbers">
+            {{ even }}
+          </li>
+        </div>
       </ul>
       <p appBasicHighlight>Style me with basic directive</p>
       <p appBetterHighlight [defaultColor]="'yellow'" [highlightColor]="'green'">Style me with better directive</p>
