--- a/forms-TD-app/src/app/app.component.html
+++ b/forms-TD-app/src/app/app.component.html
@@ -2,10 +2,11 @@
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
       <form (ngSubmit)="onSubmit()" #f="ngForm">
-        <div id="user-data">
+        <div id="user-data" ngModelGroup="userData" #userData="ngModelGroup">
           <div class="form-group">
             <label for="username">Username</label>
-            <input type="text" id="username" class="form-control" ngModel name="username" required>
+            <input type="text" id="username" class="form-control" ngModel name="username" required #username="ngModel">
+            <span *ngIf="!username.valid && username.touched">Please enter a valid username</span>
           </div>
           <button class="btn btn-default" type="button">Suggest an Username</button>
           <div class="form-group">
@@ -14,6 +15,7 @@
             <span *ngIf="!email.valid && email.touched" class="help-block">Please enter a valid email.</span>
           </div>
         </div>
+        <p *ngIf="!userData.valid && userData.touched">User data is invalid</p>
         <div class="form-group">
           <label for="secret">Secret Questions</label>
           <select id="secret" class="form-control" [ngModel]="defaultQuestion" name="secret" required>
