--- a/forms-TD-app/src/app/app.component.html
+++ b/forms-TD-app/src/app/app.component.html
@@ -8,7 +8,11 @@
             <input type="text" id="username" class="form-control" ngModel name="username" required #username="ngModel">
             <span *ngIf="!username.valid && username.touched">Please enter a valid username</span>
           </div>
-          <button class="btn btn-default" type="button">Suggest an Username</button>
+          <button
+            class="btn btn-default"
+            type="button"
+            (click)="suggestUserName()"
+            >Suggest an Username</button>
           <div class="form-group">
             <label for="email">Mail</label>
             <input type="email" id="email" class="form-control" ngModel name="email" required email #email="ngModel">
