--- a/forms-TD-assignment/src/app/app.component.css
+++ b/forms-TD-assignment/src/app/app.component.css
@@ -2,3 +2,11 @@
   margin-top: 10px;
   list-style-type: none;
 }
+
+input.ng-invalid.ng-touched {
+  border: 1px solid red;
+}
+
+span {
+  color: red;
+}
