--- a/forms-TD-assignment/src/app/app.component.html
+++ b/forms-TD-assignment/src/app/app.component.html
@@ -13,30 +13,61 @@
            Upon submitting the form, you should simply print the Value of the Form to the Console.
             Optionally, display it in your template.
       -->
-      <form (ngSubmit)="onSubmit()">
-        <div id="user-data">
+      <form (ngSubmit)="onSubmit()" #f="ngForm">
+        <div id="userdata" ngModelGroup="userData" #userData="ngModelGroup">
           <div class="form-group">
-            <label for="email">Email</label>
-            <input class="form-control" type="email" placeholder="Enter your email address." />
+            <label>Email</label>
+            <input 
+              class="form-control" 
+              type="email" 
+              name="email" 
+              id="email" 
+              placeholder="Enter your email address."
+              ngModel
+              required
+              email
+              #email="ngModel"
+            />
+            <span *ngIf="!email.valid && email.touched">Please enter a valid email address.</span>
+          </div>
+          <div class="radio" *ngFor="let subscription of subscriptionMode">
+            <label>
+              <input 
+                type="radio"
+                name="subscription" 
+                [value]="subscription"
+                ngModel
+                required
+                [(ngModel)]="selectedSubscription"
+              /> 
+              {{ subscription }}
+            </label>
           </div>
           <div class="form-group">
-            <label for="subscription">Select subscription</label>
-            <li class="dropdown" appDropdown>
-              <a href="#" class="dropdown-toggle" role="button">Subscription <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Basic</a></li>
-                <li><a href="#">Advanced</a></li>
-                <li><a href="#">Pro</a></li>
-              </ul>
-            </li>
+            <label>Password</label>
+            <input 
+              class="form-control" 
+              type="password" 
+              name="password" 
+              id="password" 
+              placeholder="Enter your password."
+              required
+              ngModel
+              #password="ngModel"
+            />
+            <span *ngIf="!password.valid && password.touched">Enter a valid password</span>
           </div>
-          <div class="form-group">
-            <label for="password">Password</label>
-            <input class="form-control" type="password" placeholder="Enter your password." />
-          </div>
-          <button class="btn btn-primary" type="submit">Submit</button>
+          <button class="btn btn-primary" type="submit" [disabled]="!f.valid">Submit</button>
         </div>
       </form>
+    </div>
+  </div>
+  <div *ngIf="formSubmitted" class="row">
+    <div class="col-xs-12 xol-sm-12 col-md-8 col-sm-offset-1 col-md-offset-2">
+      <h3>Your submission</h3>
+      <p>Email: {{ user.email }} </p>
+      <p>Subscription: {{ user.subscription }} </p>
+      <p>Password: {{ user.password}} </p>
     </div>
   </div>
 </div>
